url y controlador para la seleccion del usuario
