# openapi_server/openapi/openapi.yaml
@@ -175,6 +175,40 @@ paths:
       tags:
       - usuario
       x-openapi-router-controller: openapi_server.controllers.usuario_controller
+  /usuario/{idUsuario}/Login:
+    post:
+      description: Gestiona el inicio de sesión de un usuario actualizando la vista de contenidos favoritos
+      operationId: login_usuario
+      parameters:
+      - description: ID del usuario que inicia la sesion
+        explode: false
+        in: path
+        name: idUsuario
+        required: true
+        schema:
+          format: int64
+          type: integer
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Usuario'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Usuario'
+          description: Sesión de usuario iniciada exitosamente
+        "400":
+          description: Entrada invalida
+        "422":
+          description: Excepción en la validación
+        "500":
+          description: Error del servidor
+      summary: Añadir un nuevo usuario a la aplicación
+      tags:
+      - usuario
+      x-openapi-router-controller: openapi_server.controllers.usuario_controller
   /usuario/{idUsuario}/ListaFavoritos:
     get:
       description: Retorna el conjunto de contenidos multimedia favoritos de un usuario
